--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Dr. Angela Orebaugh"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Assistant Professor | Cybersecurity | Data | Sustainability | Smart Cities | Author | Speaker | Environmentalist | Philanthropist | Inspiring you to save the world"
   location         : "Charlottesville, VA"
-  employer         :
+  employer         : "University of Virginia"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=aiI32MEAAAAJ&hl=en&oi=ao"
   email            : "angelao@virginia.edu"
