--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "personal description"
 url                      : https://angelaorebaugh.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "angelaorebaugh/angelaorebaugh.github.io"
-teaser                   : "AO_UVA_500_300.jpg" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Angela Orebaugh"
-  avatar           : "profile.png"
+  avatar           : "AO_UVA_500_300.jpg"
   bio              : "Assistant Professor | Cybersecurity | Data | Sustainability | Environmentalist | Inspiring you to save the world"
   location         : "Charlottesville, VA"
   employer         : "University of Virginia"
