--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
   weibo            :
   xing             :
   youtube          :
-  wikipedia        :
+  wikipedia        : "https://bsky.app/profile/aorebaugh.bsky.social"
   bluesky          : "https://bsky.app/profile/aorebaugh.bsky.social"
 
 
