--- a/_config.yml
+++ b/_config.yml
@@ -88,32 +88,32 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=aiI32MEAAAAJ&hl=en&oi=ao"
   email            : "angelao@virginia.edu"
-  researchgate     : "https://bsky.app/profile/aorebaugh.bsky.social" # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              : "https://bsky.app/profile/aorebaugh.bsky.social"
+  researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
+  uri              : 
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
-  foursquare       : "https://bsky.app/profile/aorebaugh.bsky.social"
+  foursquare       : 
   github           : "angelaorebaugh"
-  google_plus      : "https://bsky.app/profile/aorebaugh.bsky.social"
-  keybase          : "https://bsky.app/profile/aorebaugh.bsky.social"
-  instagram        : "https://bsky.app/profile/aorebaugh.bsky.social"
+  google_plus      : 
+  keybase          : 
+  instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           : "https://bsky.app/profile/aorebaugh.bsky.social"
+  lastfm           : 
   linkedin         : 
   orcid            : "http://orcid.org/0000-0001-7676-681X"
-  pinterest        : "https://bsky.app/profile/aorebaugh.bsky.social"
-  soundcloud       : "https://bsky.app/profile/aorebaugh.bsky.social"
-  stackoverflow    : "https://bsky.app/profile/aorebaugh.bsky.social" # http://stackoverflow.com/users/123456/username
-  steam            : "https://bsky.app/profile/aorebaugh.bsky.social"
-  tumblr           : "https://bsky.app/profile/aorebaugh.bsky.social"
+  pinterest        : 
+  soundcloud       : 
+  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  steam            : 
+  tumblr           : 
   twitter          : 
-  vine             : "https://bsky.app/profile/aorebaugh.bsky.social"
-  weibo            : "https://bsky.app/profile/aorebaugh.bsky.social"
-  xing             : "https://bsky.app/profile/aorebaugh.bsky.social"
-  youtube          : "https://bsky.app/profile/aorebaugh.bsky.social"
+  vine             : 
+  weibo            : 
+  xing             : 
+  youtube          : 
   wikipedia        : 
   bluesky          : "https://bsky.app/profile/aorebaugh.bsky.social"
 
