--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Angela Orebaugh"
   avatar           : "AO_UVA_500_300.jpg"
-  bio              : "Associate Professor" <br> "Inspiring you to save the world, bit-by-bit"
+  bio              : "Associate Professor | Inspiring you to save the world, bit-by-bit"
   location         : "Charlottesville, VA"
   employer         : "University of Virginia"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
