--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,14 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+ # - title: "Portfolio"
+  #  url: /portfolio/
         
-  - title: "Posts"
-    url: /year-archive/
+ # - title: "Posts"
+  #  url: /year-archive/
+    
+  - title: "DWELL Lab"
+    url: /dwell_lab/
     
   - title: "CV"
     url: /cv/
