--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,7 @@ author:
   email            : "angelao@virginia.edu"
   researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "https://bsky.app/profile/aorebaugh.bsky.social"
+  uri              : "https://bsky.app/profile/aorebaugh.bsky.social"
   bitbucket        :
   codepen          :
   dribbble         :
