--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            : 
   tumblr           : 
-  twitter          : 
+  twitter          : "@angelaorebaugh"
   vine             : 
   weibo            : 
   xing             : 
