--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,7 @@ author:
   researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "https://bsky.app/profile/aorebaugh.bsky.social"
   bitbucket        :
+  bluesky          : "bsky.app/profile/aorebaugh.bsky.social"
   codepen          :
   dribbble         :
   flickr           :
@@ -105,7 +106,6 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           : 
   linkedin         : 
-  mastodon         : "fosstodon.org/@jayrobw"
   orcid            : "http://orcid.org/0000-0001-7676-681X"
   pinterest        : 
   soundcloud       : 
