--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,8 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-bluesky:
-  username               : "bsky.app/profile/aorebaugh.bsky.social"
+# bluesky:
+  #username               : "bsky.app/profile/aorebaugh.bsky.social"
 twitter:
   username               : &twitter
 facebook:
