--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 bluesky:
-  username               : "bsky.app/profile/aorebaugh.bsky.socia"
+  username               : "bsky.app/profile/aorebaugh.bsky.social"
 twitter:
   username               : &twitter
 facebook:
@@ -93,7 +93,7 @@ author:
   researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "https://bsky.app/profile/aorebaugh.bsky.social"
   bitbucket        :
-  bluesky          : "bsky.app/profile/aorebaugh.bsky.socia"
+  bluesky          : "bsky.app/profile/aorebaugh.bsky.social"
   codepen          :
   dribbble         :
   flickr           :
