--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=aiI32MEAAAAJ&hl=en&oi=ao"
   email            : "angelao@virginia.edu"
   researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
-  uri              : "https://bsky.app/profile/aorebaugh.bsky.social"
+  uri              : 
   bitbucket        :
   bluesky          : "bsky.app/profile/aorebaugh.bsky.social"
   codepen          :
